# amr_trajectory

./: CMakeLists.txt  package.xml
src/: odom_publisher.py  trajectory_publisher.cpp  trajectory_reader.cpp  trajectory_reader.launch.py
